force-app/main/default/objects/Stage_Definition__mdt/Stage_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Định nghĩa thuộc tính và hành vi cho từng Stage cụ thể trong một quy trình</description>
    <label>Stage Definition</label>
    <pluralLabel>Stage Definitions</pluralLabel>
</CustomObject>