force-app/main/default/objects/Stage_Definition__mdt/fields/Automation_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Automation_Flow_API_Name__c</fullName>
    <description>Tên API của Autolaunched Flow cần chạy khi Case vào Stage này.</description>
    <label>Automation Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>