force-app/main/default/objects/Stage_Definition__mdt/fields/Decision_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Field__c</fullName>
    <description>API Name của trường trên Case dùng để quyết định Stage tiếp theo.</description>
    <label>Decision Criteria Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>