force-app/main/default/objects/Stage_Definition__mdt/fields/Next_Stage_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage_Mappings__c</fullName>
    <description>Lưu trữ logic rẽ nhánh, ví dụ: {&quot;ValueA&quot;: &quot;StageDevNameX&quot;, &quot;ValueB&quot;: &quot;StageDevNameY&quot;, &quot;_default&quot;: &quot;StageDevNameZ&quot;}.</description>
    <label>Next Stage Mappings</label>
    <type>TextArea</type>
</CustomField>