force-app/main/default/objects/Stage_Definition__mdt/fields/Process_Definition__c.field-meta.xml
<CustomField>
    <fullName>Process_Definition__c</fullName>
    <description>Liên kết Stage này thuộc về quy trình nào.</description>
    <label>Process Definition</label>
    <referenceTo>Process_Definition__mdt</referenceTo>
    <relationshipLabel>Stage Definitions</relationshipLabel>
    <relationshipName>Stage_Definitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>