force-app/main/default/objects/Stage_Definition__mdt/fields/Required_Fields_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields_for_Exit__c</fullName>
    <description>Danh sách API Name các trường trên Case cần điền trước khi chuyển Stage (cách nhau bằng dấu phẩy hoặc dòng mới). Logic kiểm tra sẽ nằm trong Flow chính hoặc Screen Flow.</description>
    <label>Required Fields for Exit</label>
    <type>TextArea</type>
</CustomField>