force-app/main/default/objects/Stage_Definition__mdt/fields/Screen_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_API_Name__c</fullName>
    <description>Tên hiển thị của Stage (ví dụ: &quot;Capture Intent&quot;). Sẽ được dùng để cập nhật Current_Stage_Name__c trên Case.</description>
    <label>Screen Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>