force-app/main/default/objects/Stage_Definition__mdt/fields/Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order__c</fullName>
    <description>Thứ tự của Stage trong quy trình (1, 2, 3...).</description>
    <label>Stage Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>